fix channel list overflow bug

--- a/public/stylesheets/common.css
+++ b/public/stylesheets/common.css
@@ -1373,7 +1373,7 @@ h2 {
   float: left;
   width:  350px;
 }
-#channels ul {
+#channels ul.channel-list {
   max-height: 540px;
   overflow: auto;
 }
